Development
    Tell session manager and screen saver to inhibit going idle
    Add Dutch Translation
    Restart player at 'close' location when preferences are changed
        Exact frame is limited by mplayer, so restart may not be in exact location
    Add option to Edit->Preferences to select the default audio output more Stereo, Surround or 5.1
    Added Lithuanian translation
    Fix minor memory leak
    Have ogv files use the lavf demuxer
    Fix window inital size when playlist is visible.
    When running in ALSA or PULSE (flat volume), track the main volume control (unless using softvol)
    Raise max cache size from 32MB to 256MB
    Switch audio language properly in multiaudio file when langcodes are present
    When loading a file that has external subtitles, default to that subtitle mapping
    Add external subtitles to the subtitle language menu with tag "FILE 0"
    Icons provided by Victor Castillejo
    Update icon cache during install
    Add in menu options for increasing and decreasing subtitle delay
    Add in new icons, attention packagers: new file locations $datadir/icons
    Add enca to the list of language codes, use this if mplayer supports enca
        for even better detection add ":[2 letter lang code]" after enca (ie enca:ru)
    Set sub_source to 0 (file) when ID_FILE_SUB_ID is found
    Prepare for multiple icon sizes
    Replace calls to g_strncasecmp with g_ascii_strncasecmp
    Fix nautilus property page so that it works correctly
    Set flat volume flag in schemas depending on version of pulseaudio installed
    Add "Respond to Keyboard Media keys" option
    Move some functions to libgmlib
    Add internal ASX parser
    Version bump and add -fPIC to gmtk and gmlib
    Remove need to use libtool
    Apply patch to fix --as-needed linker flag
0.9.6
    Fix volume setting, when passed on command line
    Updated Turkish and Chinese Translations
    Some fixes for crap files